# chess.wish

./: .gitignore  CMakeLists.txt  README.md
googletest/lib/googletest/scripts/: upload.py
sockpp/doc/: Doxyfile.cmake
src/client/: GameController.cpp  GameController.h  main.cpp
src/client/app/: Chess.cpp  Chess.h  Lama.cpp  Lama.h
src/client/network/: ClientNetworkManager.cpp  ClientNetworkManager.h  ResponseListenerThread.h
src/client/panels/: ConnectionPanel.cpp  ConnectionPanel.h  MainGamePanel.cpp  MainGamePanel.h  MyPanel.cpp  MyPanel.h
src/client/uiElements/: ImagePanel.cpp
src/client/windows/: GameWindow.cpp  GameWindow.h
src/common/exceptions/: ChessException.h
src/common/game_state/: Board.cpp  Board.h  Color.h  GameState.cpp  GameState.h  board.cpp  board.h  color.h  game_state.cpp  game_state.h
src/common/game_state/cards/: card.cpp  discard_pile.cpp  draw_pile.cpp
src/common/game_state/piece/: Piece.cpp  Piece.h  piece.cpp  piece.h
src/common/game_state/piece/Not used/pieces/: bishop.cpp  bishop.h  king.cpp  king.h  knight.cpp  knight.h  pawn.cpp  pawn.h  queen.cpp  queen.h  rook.cpp  rook.h
src/common/game_state/piece/pieces/: bishop.cpp  bishop.h  empty.cpp  empty.h  king.cpp  king.h  knight.cpp  knight.h  pawn.cpp  pawn.h  queen.cpp  queen.h  rook.cpp  rook.h
src/common/game_state/player/: Player.cpp  Player.h  player.cpp  player.h
src/common/network/requests/: ClientRequest.cpp  ClientRequest.h  JoinGameRequest.cpp  JoinGameRequest.h  MovePieceRequest.cpp  MovePieceRequest.h  ResignRequest.cpp  ResignRequest.h  StartGameRequest.cpp  StartGameRequest.h  client_request.cpp  client_request.h  fold_request.cpp  join_game_request.cpp  join_game_request.h  move_piece_request.cpp  move_piece_request.h  resign_request.cpp  resign_request.h  select_piece_request.cpp  select_piece_request.h  start_game_request.cpp  start_game_request.h
src/common/network/responses/: FullStateResponse.cpp  FullStateResponse.h  RequestResponse.cpp  RequestResponse.h  ServerResponse.cpp  ServerResponse.h  full_state_response.cpp  full_state_response.h  request_response.cpp  request_response.h  select_piece_response.cpp  select_piece_response.h  server_response.cpp  server_response.h
src/common/serialization/: JsonUtils.h  Serializable.h  SerializableValue.h  UniqueSerializable.cpp  UniqueSerializable.h  UuidGenerator.h  json_utils.h  serializable.h  serializable_value.h  unique_serializable.cpp  unique_serializable.h  value_type_helpers.h  vector_utils.h
src/server/: GameInstance.cpp  GameInstance.h  GameInstanceManager.cpp  GameInstanceManager.h  PlayerManager.cpp  PlayerManager.h  RequestHandler.cpp  RequestHandler.h  ServerNetworkManager.cpp  ServerNetworkManager.h  game_instance.cpp  game_instance.h  game_instance_manager.cpp  game_instance_manager.h  main.cpp  player_manager.cpp  player_manager.h  request_handler.cpp  request_handler.h  server_network_manager.cpp  server_network_manager.h
unit-tests/: CMakeLists.txt  card.cpp  game_state_test.cpp  hand.cpp  move_test_1.cpp  move_test_2.cpp  move_test_3.cpp  move_test_4.cpp  move_test_5.cpp  piece_test.cpp  piece_test_1.cpp  piece_test_2.cpp  piece_test_3.cpp  piece_test_4.cpp
